# fastapi-cookiecutter

./: .gitignore  Dockerfile.app  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  sonar-project.properties
.github/: setup_template.sh  template.yaml
.github/workflows/: build-container.yaml  setup_template.yaml  sonar-main.yaml
project_name/: main.py
project_name/api/v1/: __init__.py  auth.py
project_name/models/: auth.py
project_name/utils/: security.py
scripts/: create-credential-secret.sh
